# get_location

./: .gitignore  AdataGetLocation.py  DataBase.py  README.md  Yandex_map_parser.py  abonents_adresses.py  data.py  functions.py  geocode.py  mainScript.py  notification_telegram.py  parser.py  pyproject.toml  requirements.txt  server.py  shortnames_parser.py  test.py  tet_geo.py  АбонентскиеАдресабезКоординат.csv
